# distributed-pipeline-parallelism-pytorch

./: README.md  pyproject.toml
example-cnn/: README.md  machine_a.py  machine_b.py  meta.py  pyproject.toml
src/: async_utils.py  meta.py  model_wrapper.py  models.py  server.py
